added new data items

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <h1>Avia tickets price analyzer</h1>
-    <button onclick="analize()">Analize</button>
+    <button onclick="analize('gdansk')">Gdansk</button>
+    <button onclick="analize('katowice')">Katowice</button>
+    <button onclick="analize('krakow')">Krakow</button>
+    <button onclick="analize('wroclaw')">Wroclaw</button>
+    <button onclick="analize('viena')">Viena</button>
+    <button onclick="analize('dortmund')">Dortmund</button>
     <script src="js/main.js"></script>
+    <!-- <script src="js/generate.js"></script> -->
 </body>
 </html>
