added simple hash navigation

--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
 <body>
     <div id="wrapper">
         <header>
-            <h1>Avia tickets price analyzer</h1>
+            <div>
+                <h1>Avia tickets</h1>
+                <small>Price analyzer</small>
+            </div>
+            <nav>
+                <a href="#gdansk" id="gdansk">Gdansk</a>
+                <a href="#katowice" id="katowice">Katowice</a>
+                <a href="#krakow" id="krakow">Krakow</a>
+                <a href="#wroclaw" id="wroclaw">Wroclaw</a>
+                <a href="#viena" id="viena">Viena</a>
+                <a href="#dortmund" id="dortmund">Dortmund</a>
+            </nav>
         </header>
         <main>
-            <div class="manage">
-                <button onclick="analize('gdansk')">Gdansk</button>
-                <button onclick="analize('katowice')">Katowice</button>
-                <button onclick="analize('krakow')">Krakow</button>
-                <button onclick="analize('wroclaw')">Wroclaw</button>
-                <button onclick="analize('viena')">Viena</button>
-                <button onclick="analize('dortmund')">Dortmund</button>
-            </div>
             <div id="jsGrid"></div>
         </main>
         <footer>
