added backend support for proxy requests

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
             </nav>
         </header>
         <main>
+            <!-- <button onclick="fill('GDN')">GDN</button>
+            <button onclick="fill('WRO')">WRO</button>
+            <button onclick="fill('KRK')">KRK</button>
+            <button onclick="fill('KTW')">KTW</button>
+            <button onclick="fill('VIE')">VIE</button>
+            <button onclick="fill('DTM')">DTM</button> -->
             <div id="jsGrid"></div>
         </main>
         <footer>
